Inserting Key value pair of url key

--- a/Regression Suite for Car loan App.postman_collection.json
+++ b/Regression Suite for Car loan App.postman_collection.json
@@ -1628,6 +1628,10 @@
 		{
 			"key": "AssignmentID",
 			"value": ""
-		}
+		},
+		{
+		        "key": "url",
+			"value": "http://ec2-3-136-169-126.us-east-2.compute.amazonaws.com:8080/prweb/api/v1/"
+		}	
 	]
 }
